# compass

./: .gitignore  README.md  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: e2e.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 70ed8711aca8_initial_schema.py  97480f722a75_add_connector_configs.py
backend/app/api/v1/: assessments.py  auth.py  controls.py  evidence.py  reports.py  router.py  setup.py  systems.py  users.py
backend/app/connectors/: __init__.py  aws.py  azure.py  base.py  github.py  jira.py  manual.py  servicenow.py
backend/app/frameworks/: __init__.py  base.py  dora.py  eu_ai_act.py  iso_42001.py  nist_ai_rmf.py
backend/app/models/: __init__.py  connector_config.py
backend/app/schemas/: control.py  report.py  system.py  user.py
backend/app/scripts/: seed.py  seed_frameworks.py
backend/app/services/: auth.py  evidence.py  report.py
backend/app/workers/: evidence.py  main.py
backend/tests/: conftest.py  test_auth.py  test_connectors.py  test_frameworks.py  test_reports.py  test_setup.py  test_systems.py
charts/compass/: Chart.yaml  values.yaml
charts/compass/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  ingress.yaml  secrets.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
frontend/: Dockerfile  package.json
frontend/app/: layout.tsx
frontend/app/(marketing)/: page.tsx
frontend/lib/: api.ts  export-report.ts  types.ts
(+17 files in other folders)
